# Neural_Networks_from_Scratch

./: .gitignore  .project  AF_ANN.hpp  CMakeLists.txt  Layer.hpp  README.md  a.out  basic_ann.cpp  build.sh  custom_activation.cpp  input.txt  test_XOR.cpp  test_XOR_training.txt  test_af.cpp  try.cpp
